# FacialAnimation

./: .gitignore  CMakeLists.txt  FacialAnimation.pro  README.md  models.txt
include/: NGLScene.h  OpenGLWindow.h  WindowParams.h
shaders/: PerFragASDFrag.glsl  PerFragASDVert.glsl
src/: NGLScene.cpp  OpenGLWindow.cpp  main.cpp
